# ml4cv-assignment

./: .gitignore  AUGMENTATION_CHANGES.md  CLAUDE.md  MODEL_COMPARISON.md  README.md  ablation_studies.py  config.py  create_comparison_plots.py  dataloader.py  deeplabv3plus.py  deeplabv3plus_reesnet101.py  deeplabv3plus_resnet50.py  download.sh  energy_score_anomaly_detection.py  evaluate_qualitative.py  heat_anomaly_detection.py  hierabase224.py  log.md  logit_anomaly_detection.py  main.ipynb  maximum_softmax_probability.py  pyproject.toml  requirements.txt  segformerb5.py  simple_max_logits.py  standardized_max_logits.py  test_augmentations.py  test_augmented_dataloader.py  test_imports.py  test_sml_debug.py  train_augmented_resnet50.py
ablation_study/: README.md  __init__.py  augmentation_ablation.py  scale_range_ablation.py  scale_range_ablation_PLAN.md  threshold_sensitivity.py
anomaly_detection/: README.md  energy_score_anomaly_detection.py  heat_anomaly_detection.py  maximum_softmax_probability.py  simple_max_logits.py  standardized_max_logits.py
assets/: ablation_study_method_comparison.csv  ablation_study_method_comparison.md  ablation_study_method_f1_scores.csv  ablation_study_method_thresholds.csv  model_method_comparison.csv  model_method_comparison.json  model_method_comparison.md  model_method_f1_scores.csv  model_method_thresholds.csv  resnet50_augmented_training_summary.txt  scale_range_ablation_method_comparison.csv  scale_range_ablation_method_comparison.md  scale_range_ablation_method_f1_scores.csv  scale_range_ablation_method_thresholds.csv
(+43 files in other folders)
